# Mud

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: opts.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs  tcp_client.rs  udp_client.rs
crates/core/: main.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/opts/: Cargo.toml
crates/packet/: Cargo.toml
crates/packet/src/: lib.rs  question.rs  resource.rs
crates/packet/src/formats/: dig.rs  json.rs  mod.rs  yaml.rs
src/: args.rs  header.rs  lib.rs  main.rs  opts.rs
src/client/: config.rs  mod.rs  tcp_client.rs  udp_client.rs
src/packet/: answer.rs  header.rs  mod.rs  question.rs  resource.rs
src/packet/formats/: dig.rs  json.rs  yaml.rs
src/packet/test_packets/: mod.rs
tests/: integration_test.rs
