[package]
name = "mud"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
deku = "0.14.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
