[package]
name = "mud"
version = "0.2.0"
edition = "2021"

[[bin]]
path = "crates/core/main.rs"
name = "mud"

[workspace]
members = [
	"crates/client",
	"crates/lib",
	"crates/opts",
	"crates/packet",
]

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
deku = "0.14.1"
mud-lib = { version = "0.2.0", path = "crates/lib" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
