[package]
name = "mud-packet"
version = "0.2.0"
edition = "2021"

[dependencies]
deku = "0.14.1"
mud-cli = { version = "0.2.0", path = "../cli" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
#tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
