[package]
name = "mud-packet"
version = "0.2.0"
edition = "2021"

[dependencies]
deku = "0.14.1"
mud-opts = { version = "0.2.0", path = "../opts" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.89", optional = true }
serde_yaml = { version = "0.9.14", optional = true }

[features]
default = ["json", "yaml"]
json = ["serde_json"]
yaml = ["serde_yaml"]
